--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "redux-bootstrap": "^1.3.0",
     "regenerator-runtime": "^0.13.5",
     "sass-loader": "^8.0.2",
+    "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
